# cow_condition

./: CMakeLists.txt  README.MD  cbc.cpp  cbc.hpp  cow_condition.cpp  cow_condition.h  demo.cpp  log.h  test.py
data/: dp.tiff  dp.txt
